--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -19,6 +19,10 @@
 		display: none;
 	}
 
+	.customer-call-note {
+		min-height: 1.5em;
+	}
+
 </style>
 
 <h1>{$layout.pagetitle}</h1>
@@ -113,8 +117,9 @@
 										{hint mode="toggle" icon="view" class="customer-call-note-hint" text=$call.notes}
 									</span>
 									<span class="customer-call-edit" style="display: none;">
-										<input type="text" class="customer-call-note" value="{$call.notes|escape}"
-										data-original-value="{$call.notes|escape}">
+										<textarea type="text" class="customer-call-note lms-ui-autogrow"
+											data-original-value="{$call.notes|escape}"
+											>{$call.notes|escape}</textarea>
 									</span>
 								</td>
 								<td class="buttons nobr">
@@ -159,14 +164,22 @@
 		});
 
 		$('.customer-call-note').keypress(function(e) {
-			if (e.key == 'Enter') {
-				$(this).closest('.customer-call').find('.customer-call-save-button.lms-ui-button').click();
+			switch (e.key) {
+/*
+				case 'Enter':
+					$(this).closest('.customer-call').find('.customer-call-save-button.lms-ui-button').click();
+					break;
+*/
+				case 'Escape':
+					$(this).closest('.customer-call').find('.customer-call-cancel-button.lms-ui-button').click();
+					break;
 			}
 		});
 
 		$('.customer-call-view.lms-ui-button').click(function() {
 			var row = $(this).closest('.customer-call');
 			row.find('.customer-call-edit,.customer-call-view:not(.customer-call-note-more)').toggle();
+			row.find('.customer-call-note').trigger('input');
 		});
 
 		$('.customer-call-edit.lms-ui-button').click(function() {
