--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -8,25 +8,35 @@
 		height: 2em;
 	}
 
-	ul.customer-list {
+	#callpanel .customer-list {
 		margin-block-start: 0.1em;
 		margin-block-end: 0.1em;
 		list-style: none;
 		padding-inline-start: 1em;
 	}
 
-	.customer-call-edit {
+	#callpanel .customer-list li[data-customer-id]:not(:last-child) {
+		padding-bottom: 0.2em;
+	}
+	#callpanel .customer-list li[data-customer-id]:not(:first-child) {
+		padding-top: 0.2em;
+	}
+
+	#callpanel .customer-call-edit {
 		display: none;
 	}
 
-	.customer-call-note {
+	#callpanel .customer-call-note {
 		min-height: 1.5em;
 	}
 
 </style>
 
+<form id="customer-call-edit"></form>
+
 <h1>{$layout.pagetitle}</h1>
-<table class="lmsbox">
+
+<table class="lmsbox" id="callpanel">
 	<colgroup>
 		<col style="width: 99%;">
 		<col style="width: 1%;">
@@ -97,10 +107,25 @@
 									{if !empty($call.customers)}
 										<ul class="customer-list">
 											{foreach $call.customers as $customer}
-												<li>
-													<a href="?m=customerinfo&id={$customer.id}">{$customer.lastname|escape} {$customer.name|escape}</a>
+												<li data-customer-id="{$customer.id}">
+													<a href="?m=customerinfo&id={$customer.id}"
+													   class="customer-call-view">
+														(#{$customer.id}) {$customer.lastname|escape} {$customer.name|escape}
+													</a>
+													<span class="customer-call-edit"></span>
 												</li>
 											{/foreach}
+											<li data-customer-id="">
+												<a href="?m=customerinfo&id=%customer_id%"
+												   class="customer-call-view">
+												</a>
+												<span class="customer-call-edit"></span>
+											</li>
+											<li>
+												<span class="customer-call-edit">
+													{button type="link" icon="add" tip="Add" class="customer-add-button"}
+												</span>
+											</li>
 										</ul>
 									{/if}
 								</td>
@@ -154,6 +179,21 @@
 		</tr>
 	</tbody>
 </table>
+
+<template id="customer-selection-template">
+	{customerlist
+		form        = "customer-call-edit"
+		customers   = $customers
+		selected    = "%customer_id%"
+		selectname  = "%select%"
+		select_id   = "%select_id%"
+		inputname   = "%input%"
+		input_id    = "%input_id%"
+		firstoption = ""
+		version = 2
+	}
+</template>
+
 <script>
 
 	$(function() {
@@ -176,10 +216,45 @@
 			}
 		});
 
+		function addCustomerList(selector) {
+			var template = $('#customer-selection-template').html();
+			$(selector).each(function(index) {
+				var customerId = $(this).closest('[data-customer-id]').attr('data-customer-id');
+				var html = template
+					.replace('%customer_id%', index)
+					.replace('%input%', 'customer-input-' + index)
+					.replace('%input_id%', 'customer-input-' + index)
+					.replace('%select%', 'customer-select-' + index)
+					.replace('%select_id%', 'customer-select-' + index);
+				$(this).html(html);
+				$(this).find('#customer-input-' + index).val(customerId);
+				initCustomerList($(this).find('.lms-ui-customer-select-container'));
+				var input = $(this).find('.lms-ui-customer-select-customerid');
+				input.focus();
+				input.change(function () {
+				});
+			});
+		}
+
 		$('.customer-call-view.lms-ui-button').click(function() {
 			var row = $(this).closest('.customer-call');
-			row.find('.customer-call-edit,.customer-call-view:not(.customer-call-note-more)').toggle();
+			addCustomerList(row.find('.customer-list [data-customer-id] .customer-call-edit'));
+			row.find('.customer-call-edit').toggle();
+			row.find('.customer-call-view:not(.customer-call-note-more)').toggle();
 			row.find('.customer-call-note').trigger('input');
+		});
+
+		$('.customer-add-button').click(function() {
+			$(this).closest('li').before(
+				'<li data-customer-id="">' +
+					'<a href="?m=customerinfo&id=%customer_id%"' +
+						'class="customer-call-view">' +
+					'</a>' +
+					'<span class="customer-call-edit"></span>' +
+				'</li>'
+			);
+			addCustomerList($(this).closest('li').prev().find('.customer-call-edit'));
+			$(this).closest('.customer-list').find('.customer-call-edit').show().end().find('.customer-call-view').hide();
 		});
 
 		$('.customer-call-edit.lms-ui-button').click(function() {
@@ -187,13 +262,50 @@
 			var notesInput = row.find('.customer-call-note');
 			var notes = notesInput.val();
 			if ($(this).is('.customer-call-save-button')) {
+				var listItems = row.find('.customer-list li');
+				var addedCustomers = [];
+				var removedCustomers = [];
+
+				listItems.find('.lms-ui-customer-select-customerid').each(function() {
+					var customerId = parseInt($(this).val());
+
+					if ($(this).closest('[data-customer-id=""]').length) {
+						if (customerId) {
+							addedCustomers.push(customerId);
+						}
+						return;
+					}
+
+					var oldCustomerId = parseInt($(this).closest('[data-customer-id]').attr('data-customer-id'));
+					if (oldCustomerId !== customerId) {
+						if (!oldCustomerId && customerId) {
+							addedCustomers.push(customerId)
+						} else if (oldCustomerId && !customerId) {
+							removedCustomers.push(oldCustomerId);
+						} else {
+							removedCustomers.push(oldCustomerId);
+							addedCustomers.push(customerId)
+						}
+					}
+				});
+
+				$.each(removedCustomers, function(index, value) {
+					var addedIndex = addedCustomers.indexOf(value);
+					if (addedIndex !== -1) {
+						addedCustomers.splice(addedIndex, 1);
+						removedCustomers.splice(index, 1);
+					}
+				});
+
 				$.ajax({
 					url: "?m=customercall&edit=1",
 					dataType: "json",
 					method: "POST",
 					data: {
 						callid: row.attr('data-call-id'),
-						notes: notes
+						notes: notes,
+						"added-customers": addedCustomers,
+						"removed-customers": removedCustomers
 					}
 				}).always(function() {
 					row.find('.customer-call-edit,.customer-call-view:not(.customer-call-note-more').toggle();
@@ -204,11 +316,26 @@
 						row.find('.customer-call-note-hint').attr('data-hint', escapeHtml(notes).replace(/\n/g, '<br>')).removeAttr('data-init');
 					}
 					notesInput.attr('data-original-value', escapeHtml(notes));
+
+					row.find('.customer-list li').each(function() {
+						var newCustomerId = parseInt($(this).find('.lms-ui-customer-select-customerid').val());
+						var newCustomerName = $(this).find('.lms-ui-customer-select-name').html();
+						var anchor = $(this).find('.customer-call-view');
+						if (newCustomerId) {
+							anchor.html(newCustomerName).attr('href', '?m=customerinfo&id=' + newCustomerId);
+						} else {
+							anchor.html('').removeAttr('href');
+						}
+						$(this).attr('data-customer-id', newCustomerId ? newCustomerId : '');
+					});
+					row.find('[data-customer-id=""]').slice(1).remove();
+					row.find('[data-customer-id=""]').appendTo(row.find('[data-customer-id=""]').parent());
 				});
 			} else {
 				row.find('.customer-call-edit,.customer-call-view:not(.customer-call-note-more)').toggle();
 				row.find('.customer-call-note-more').toggle(notesInput.attr('data-original-value') >= 50);
 				notesInput.val(notesInput.attr('data-original-value'));
+				row.find('[data-customer-id=""]').slice(1).remove();
 			}
 		});
 	});
