improvement: added more needed information to panel and more minor ui improvements

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -406,6 +406,15 @@
   }
 }
 
+.lms-ui-icon-expired {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-exclamation-circle;
+  }
+}
+
 .lms-ui-icon-add,
 .lms-ui-icon-new,
 .lms-ui-icon-append {
