--- a/css/style.less
+++ b/css/style.less
@@ -2544,14 +2544,13 @@ fieldset {
 }
 
 .lms-ui-category-label {
-	box-shadow: 0 0.1em 0.1em #888;
+	border: 1px black solid;
 	background-color: white;
 	color: black;
-	padding: 0.35em;
+	padding: 0.1em 0.4em;
 	text-decoration: none;
-	border-radius: 0.45em;
+	border-radius: 0.5em;
 	display: inline-block;
-	font-weight: bold;
 }
 
 #lms-ui-resource-tab-selector-container {
