improvement: category label border the same as button border

--- a/css/style.less
+++ b/css/style.less
@@ -2544,7 +2544,7 @@ fieldset {
 }
 
 .lms-ui-category-label {
-	border: 1px black solid;
+	border: 1px #615847 solid;
 	background-color: white;
 	color: black;
 	padding: 0.1em 0.4em;
