improvement: explicit action speficiation

--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -38,7 +38,7 @@
 
 <form id="customer-call-edit"></form>
 
-<form id="filter" method="POST"></form>
+<form id="filter" method="POST" action="?m={$layout.module}"></form>
 
 <h1>
 	{if $cid}
