--- a/templates/default/rt/rtticketparentinfo.html
+++ b/templates/default/rt/rtticketparentinfo.html
@@ -7,7 +7,7 @@
 	<THEAD>
 		<TR class="hand lmsbox-titlebar" data-lmsbox-content="parentpanel-{$layout.module}">
 			<TD class="bold">
-				{icon name="helpdesk" label="Parent ticket"}
+				{icon name="helpdesk" label="Primary ticket"}
 			</TD>
 			<TD></TD>
 		</TR>
@@ -38,7 +38,7 @@
 					{foreachelse}
 					<tr>
 						<td colspan="11" class="empty-table">
-							{trans("There is no assigned parent ticket.")}
+							{trans("There is no assigned primary ticket.")}
 						</td>
 					</tr>
 					{/foreach}
